# Tic-tac-toe-level-3

./: .gitignore
level-3/: CMakeLists.txt  PROOF.md  README.md  test_simple.cpp
level-3/src/: main.cpp
level-3/src/core/: bot_pure.cpp  bot_pure.h  logic.cpp  logic.h  parallel.cpp  parallel.h  parallel_test.cpp  parallel_test.h  pipeline.h  property_test.cpp  property_test.h  recursion_combinator.cpp  types.h
level-3/src/interface/: i_interaction.cpp  i_interaction.h  i_renderer.cpp  i_renderer.h
level-3/src/sdl/: interaction.cpp  interaction.h  renderer.cpp  renderer.h
level-3/src/shell/: engine.cpp  engine.h  logger.cpp  logger.h  rng.h
level-3/src/terminal/: interaction.cpp  interaction.h  renderer.cpp  renderer.h
level-3/src/utils/: config.cpp  config.h  helper.h  helper.tpp
